# Universal-App-Launcher

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  selected_path.txt  xdg-open
application/Repositories/: Resource_manager.h  Resource_repository.h  User_repository.h
application/Usercases/: Resource_service.h  User_service.h
core/api/: bindings.cpp  main.cpp  main_bindings.cpp
core/api/DTO/: Resource.h
core/api/controllers/: ResourceApi.h  category_api.cpp  category_api.h  preset_api.cpp  preset_api.h  resource_api.h  resourse_api.cpp  resourse_controller.cpp  resourсe_api.cpp  tag_api.cpp  tag_api.h  user_api.cpp  user_api.h
core/api/dto/: Resource.h
core/api/mappers/: resource_mapper.h
core/application/Repositories/: User_repository.h
core/application/Usercases/: User_service.h
core/application/dto/: Category.h  Preset.h  Resource.h  Tag.h  User.h
core/application/mappers/: category_mapper.cpp  category_mapper.h  preset_mapper.cpp  preset_mapper.h  resource_mapper.cpp  resource_mapper.h  tag_mapper.cpp  tag_mapper.h  user_mapper.cpp  user_mapper.h
core/application/services/: PresetService.cpp  ResourceService.cpp  ResourceService.h  category_service.cpp  category_service.h  preset_service.cpp  preset_service.h  resource_service.cpp  resource_service.h  tag_service.cpp  tag_service.h  user_service.cpp  user_service.h
core/domain/: Category.h  Preset.h  PresetResource.h  Resource.h  ResourceTag.h  Tag.h  User.h  domain.h
core/infrastructure/: repository
core/infrastructure/install/include/hellnah/Core/: DbHeader.h  Id.h
core/infrastructure/install/include/hellnah/Engine/: Database.h  Table.h
core/infrastructure/install/include/hellnah/Storage/: FileStorage.h
core/infrastructure/install/lib/cmake/hellnah/: hellnahTargets-noconfig.cmake
core/infrastructure/persistence/: db_context.h
domain/: Category.h  Preset.h  PresetResource.h  Resource.h  ResourceTag.h  Tag.h  User.h
electron/: main.js  package-lock.json  package.json
electron/renderer/: index.html  launcher.js
frontend/: app.js  index.html  style.css
install/include/hellnah/Core/: RecordHeader.h  WorkFile.h
install/lib/cmake/hellnah/: hellnahTargets.cmake
